<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/carTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cPrice"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="22dp" />

    <EditText
        android:id="@+id/cPrice"
        android:layout_width="360dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/carPrice"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/dpAmount"
        app:layout_constraintTop_toBottomOf="@+id/carTitle"
        tools:layout_editor_absoluteX="21dp" />

    <EditText
        android:id="@+id/dpAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/dpA"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/loanPeriod"
        app:layout_constraintEnd_toEndOf="@+id/cPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cPrice"
        app:layout_constraintTop_toBottomOf="@+id/cPrice" />

    <EditText
        android:id="@+id/loanPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/year"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/interest"
        app:layout_constraintEnd_toEndOf="@+id/dpAmount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dpAmount"
        app:layout_constraintTop_toBottomOf="@+id/dpAmount" />

    <EditText
        android:id="@+id/interest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/interestRate"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/loanPeriod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/loanPeriod"
        app:layout_constraintTop_toBottomOf="@+id/loanPeriod" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:onClick="calculate"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/carLoan"
        app:layout_constraintEnd_toEndOf="@+id/interest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/interest"
        app:layout_constraintTop_toBottomOf="@+id/interest" />

    <TextView
        android:id="@+id/carLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/carLoan"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/cInterest"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="26dp" />

    <TextView
        android:id="@+id/cInterest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/interest"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mRepayment"
        app:layout_constraintEnd_toEndOf="@+id/carLoan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/carLoan"
        app:layout_constraintTop_toBottomOf="@+id/carLoan" />

    <TextView
        android:id="@+id/mRepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/repay"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cInterest"
        app:layout_constraintTop_toBottomOf="@+id/cInterest" />

    <TextView
        android:id="@+id/carLoanRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/carLoan"
        app:layout_constraintStart_toEndOf="@+id/carLoan"
        app:layout_constraintTop_toTopOf="@+id/carLoan" />

    <TextView
        android:id="@+id/interestRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cInterest"
        app:layout_constraintStart_toEndOf="@+id/cInterest"
        app:layout_constraintTop_toTopOf="@+id/cInterest" />

    <TextView
        android:id="@+id/monthRepayRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/mRepayment"
        app:layout_constraintStart_toEndOf="@+id/mRepayment"
        app:layout_constraintTop_toTopOf="@+id/mRepayment" />

</androidx.constraintlayout.widget.ConstraintLayout>